Revision history for ExtUtils-Config

{{$NEXT}}

0.004     2011-10-13 15:28:46 Europe/Amsterdam
          Fix tests to work on Windows

0.003     2011-09-15 12:33:25 Europe/Amsterdam
          Add an exists method
          Let values_set return a copy over the overrides

0.002     2011-03-31 17:44:52 Europe/Amsterdam
          Made hashref the only argument to contructor, instead of hash containing one hashref.

0.001     2011-03-27 13:42:21 Europe/Amsterdam
          Renamed Module::Build::Config to ExtUtils::Config, reset $VERSION count