@@ -1,6 +1,10 @@
 Revision history for ExtUtils-Config
 
 {{$NEXT}}
+          Sanatize ExtUtils::Config, in particular:
+            * Get rid of class methods
+            * Get rid of push/pop methods
+            * Add a clear method
 
 0.004     2011-10-13 15:28:46 Europe/Amsterdam
           Fix tests to work on Windows
